find_program(BASH_EXECUTABLE bash REQUIRED)

add_subdirectory(unittests)

function(add_waterwall_integration_test test_name case_name)
  set(case_dir "${CMAKE_CURRENT_SOURCE_DIR}/cases/${case_name}")

  add_test(
    NAME ${test_name}
    COMMAND
      "${BASH_EXECUTABLE}"
      "${CMAKE_CURRENT_SOURCE_DIR}/run_waterwall_case.sh"
      "$<TARGET_FILE:Waterwall>"
      "${case_dir}"
      "30"
  )

  set_tests_properties(
    ${test_name}
    PROPERTIES
      TIMEOUT 120
      LABELS "integration;tunnels"
  )
endfunction()

add_waterwall_integration_test(waterwall.disturber_passthrough disturber_passthrough)
add_waterwall_integration_test(waterwall.obfuscator_roundtrip obfuscator_roundtrip)
add_waterwall_integration_test(waterwall.obfuscator_tls_record_roundtrip obfuscator_tls_record_roundtrip)
add_waterwall_integration_test(waterwall.encryption_roundtrip encryption_roundtrip)
add_waterwall_integration_test(waterwall.encryption_small_frame_roundtrip encryption_small_frame_roundtrip)
add_waterwall_integration_test(waterwall.keepalive_roundtrip keepalive_roundtrip)
add_waterwall_integration_test(waterwall.tls_roundtrip tls_roundtrip)
add_waterwall_integration_test(waterwall.connection_fisher_roundtrip connection_fisher_roundtrip)
add_waterwall_integration_test(waterwall.connection_fisher_encryption_roundtrip connection_fisher_encryption_roundtrip)
add_waterwall_integration_test(waterwall.udp_over_tcp_roundtrip udp_over_tcp_roundtrip)
add_waterwall_integration_test(waterwall.tcp_over_udp_roundtrip tcp_over_udp_roundtrip)
add_waterwall_integration_test(waterwall.tcp_over_udp_fec_roundtrip tcp_over_udp_fec_roundtrip)
add_waterwall_integration_test(waterwall.tcp_over_udp_disturber_roundtrip tcp_over_udp_disturber_roundtrip)
add_waterwall_integration_test(waterwall.tcp_over_udp_fec_disturber_roundtrip tcp_over_udp_fec_disturber_roundtrip)
add_waterwall_integration_test(waterwall.halfduplex_roundtrip halfduplex_roundtrip)
add_waterwall_integration_test(waterwall.http1_bidirectional_roundtrip http1_bidirectional_roundtrip)
add_waterwall_integration_test(waterwall.http1_bidirectional_tcp_loopback http1_bidirectional_tcp_loopback)
add_waterwall_integration_test(waterwall.http1_split_roundtrip http1_split_roundtrip)
add_waterwall_integration_test(waterwall.http1_split_tcp_loopback http1_split_tcp_loopback)
add_waterwall_integration_test(waterwall.http1_split_path_cookie_roundtrip http1_split_path_cookie_roundtrip)
add_waterwall_integration_test(waterwall.http2_bidirectional_roundtrip http2_bidirectional_roundtrip)
add_waterwall_integration_test(waterwall.http2_bidirectional_tcp_loopback http2_bidirectional_tcp_loopback)
add_waterwall_integration_test(waterwall.http_websocket_bidirectional_roundtrip http_websocket_bidirectional_roundtrip)
add_waterwall_integration_test(waterwall.http_websocket_bidirectional_tcp_loopback http_websocket_bidirectional_tcp_loopback)
add_waterwall_integration_test(waterwall.http_upgrade_custom_bidirectional_roundtrip http_upgrade_custom_bidirectional_roundtrip)
add_waterwall_integration_test(waterwall.http_upgrade_custom_bidirectional_tcp_loopback http_upgrade_custom_bidirectional_tcp_loopback)
add_waterwall_integration_test(waterwall.mux_counter_roundtrip mux_counter_roundtrip)
add_waterwall_integration_test(waterwall.mux_timer_roundtrip mux_timer_roundtrip)
add_waterwall_integration_test(waterwall.mux_fixed_connections_count_roundtrip mux_fixed_connections_count_roundtrip)
add_waterwall_integration_test(waterwall.config_variables_roundtrip config_variables_roundtrip)
add_waterwall_integration_test(waterwall.packets_stream_bridge_roundtrip packets_stream_bridge_roundtrip)
add_waterwall_integration_test(waterwall.udp_listener_packet_bridge_roundtrip udp_listener_packet_bridge_roundtrip)
add_waterwall_integration_test(waterwall.ping_new_ip_icmp_roundtrip ping_new_ip_icmp_roundtrip)
add_waterwall_integration_test(waterwall.ping_reuse_ipv4_addresses_roundtrip ping_reuse_ipv4_addresses_roundtrip)
add_waterwall_integration_test(waterwall.ping_only_icmp_roundtrip ping_only_icmp_roundtrip)
add_waterwall_integration_test(waterwall.ping_protocol_swap_roundtrip ping_protocol_swap_roundtrip)
add_waterwall_integration_test(waterwall.ipmanipulator_tcp_udp_swap_roundtrip ipmanipulator_tcp_udp_swap_roundtrip)
add_waterwall_integration_test(waterwall.ipmanipulator_udp_tcp_swap_roundtrip ipmanipulator_udp_tcp_swap_roundtrip)
add_waterwall_integration_test(waterwall.reverse_tcp_bridge_roundtrip reverse_tcp_bridge_roundtrip)
add_waterwall_integration_test(waterwall.wireguard_udpstateless_packet_roundtrip wireguard_udpstateless_packet_roundtrip)

add_custom_target(check_waterwall_integration_tests
  COMMAND
    "${CMAKE_CTEST_COMMAND}"
    --test-dir "${CMAKE_BINARY_DIR}"
    -C "$<CONFIG>"
    --output-on-failure
    -L integration
  DEPENDS Waterwall
  USES_TERMINAL
)

add_custom_target(check_waterwall_tests
  COMMAND
    "${CMAKE_CTEST_COMMAND}"
    --test-dir "${CMAKE_BINARY_DIR}"
    -C "$<CONFIG>"
    --output-on-failure
  DEPENDS
    Waterwall
    waterwall_unit_tests
  USES_TERMINAL
)
